Adição de tópicos na pagina principal

--- a/estrutura/index.html
+++ b/estrutura/index.html
@@ -10,7 +10,15 @@
 <body>
     <h1 style="text-align: center">Processo Unificado Ágil</h1>
 
-    <h2>O que é?</h2>
+    <h2>Tópicos:</h2>
+    <ul>
+        <li>Introdução ao Processo Unificado Ágil</li>
+        <li>Benefícios</li>
+        <li>Diferença para o RUP</li>
+        <li>Impacto nas empresas</li>
+    </ul>
+
+    <h2>Introdução:</h2>
     <p style="text-align: justify;" style="text-align: center;">
         O Processo Unificado Ágil ou do inglês <i>Agile Unified Processs</i> adota uma filosofia serial (sequência
         linear de atividades) para o que é amplo interativo para que o é particular. Este processo possui 4 atividades
@@ -59,7 +67,10 @@
             para a equipe responsável.</li>
     </ul>
 
+    <hr>
+
+    <h1></h1>
+
     <p align="center" style="font-size: larger;">Em breve teremos mais conteúdo nesse site. Seja paciente!!</p>
 </body>
-
 </html>
