Inde.html modificado com css

--- a/estrutura/index.html
+++ b/estrutura/index.html
@@ -5,72 +5,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=width-device, initial-scale=1.0">
     <title>Processo Unificado Ágil</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <h1 style="text-align: center">Processo Unificado Ágil</h1>
+    <nav class="navegacao-container">
+        <h3>O que é?</h3>
+        <h3>Introdução</h3>
+        <h3></h3>
+    </nav>
+    <main>
+        <h1 style="text-align: center">Processo Unificado Ágil</h1>
+        <h2 style="text-align: center;">Introdução</h2>
+        <hr>
+        
+        <h2>Tópicos:</h2>
+        <ul>
+            <li>Introdução ao Processo Unificado Ágil</li>
+            <li>Benefícios</li>
+            <li>Diferença para o RUP</li>
+            <li>Impacto nas empresas</li>
+        </ul>
 
-    <h2>Tópicos:</h2>
-    <ul>
-        <li>Introdução ao Processo Unificado Ágil</li>
-        <li>Benefícios</li>
-        <li>Diferença para o RUP</li>
-        <li>Impacto nas empresas</li>
-    </ul>
+        <h2>Introdução:</h2>
+        <p style="text-align: justify;" style="text-align: center;">
+            O Processo Unificado Ágil ou do inglês <i>Agile Unified Processs</i> adota uma filosofia serial (sequência
+            linear de atividades) para o que é amplo interativo para que o é particular. Este processo possui 4
+            atividades
+            clássicas adotadas pelo Processo Unificado.
+        </p>
 
-    <h2>Introdução:</h2>
-    <p style="text-align: justify;" style="text-align: center;">
-        O Processo Unificado Ágil ou do inglês <i>Agile Unified Processs</i> adota uma filosofia serial (sequência
-        linear de atividades) para o que é amplo interativo para que o é particular. Este processo possui 4 atividades
-        clássicas adotadas pelo Processo Unificado.
-    </p>
+        <h3>Sendo eles:</h3>
 
-    <h3>Sendo eles:</h3>
+        <ul>
+            <li>Início</li>
+            <li>Elaboração</li>
+            <li>Construção</li>
+            <li>Transição</li>
+        </ul>
 
-    <ul>
-        <li>Início</li>
-        <li>Elaboração</li>
-        <li>Construção</li>
-        <li>Transição</li>
-    </ul>
+        <p>
+            Dentro de cada atividade citada, a equipe itera ou se repete para alcançar a maior agilidade possível para
+            entregar os incrementos para os usuários finais. As entregas devem ser enviadas o mais rápido possível.
+        </p>
 
-    <p>
-        Dentro de cada atividade citada, a equipe itera ou se repete para alcançar a maior agilidade possível para
-        entregar os incrementos para os usuários finais. As entregas devem ser enviadas o mais rápido possível.
-    </p>
+        <p>A <abbr title="Agile Unified Process">AUP</abbr> possui cerca de seis atividades, na qual a equipe sempre irá
+            trabalhar por cima.</p>
 
-    <p>A <abbr title="Agile Unified Process">AUP</abbr> possui cerca de seis atividades, na qual a equipe sempre irá
-        trabalhar por cima.</p>
+        <h3>As atividades são:</h3>
 
-    <h3>As atividades são:</h3>
+        <ul>
+            <li><strong>Modelagem</strong> Modelos UML que representam o negócio são criados. É importante que esses
+                modelos
+                sejam organizados, eficientes e adequados para permanecer ágil.</li><br>
 
-    <ul>
-        <li><strong>Modelagem</strong> Modelos UML que representam o negócio são criados. É importante que esses modelos
-            sejam organizados, eficientes e adequados para permanecer ágil.</li><br>
+            <li><strong>Implementação</strong> Esses modelos são traduzidos e colocados no código fonte.</li><br>
 
-        <li><strong>Implementação</strong> Esses modelos são traduzidos e colocados no código fonte.</li><br>
+            <li><strong>Teste</strong> Depois de terem implementado o código fonte, a equipe faz uma série de testes
+                usando
+                cada método que puderem afin de achar algum erro gerado no código, para que assim eles possam corrigir e
+                ajustar o codigo de acordo com os requisitos.</li><br>
 
-        <li><strong>Teste</strong> Depois de terem implementado o código fonte, a equipe faz uma série de testes usando
-            cada método que puderem afin de achar algum erro gerado no código, para que assim eles possam corrigir e
-            ajustar o codigo de acordo com os requisitos.</li><br>
+            <li><strong>Aplicação:</strong> É a entrega de um incremento do software para o usuário final para depois
+                ter um
+                feedback e possivelmente ter futuras mudanças com base nisso.</li> <br>
 
-        <li><strong>Aplicação:</strong> É a entrega de um incremento do software para o usuário final para depois ter um
-            feedback e possivelmente ter futuras mudanças com base nisso.</li> <br>
+            <li><strong>Gerenciamento de Configuração e Gerenciamento de projeto:</strong> É o controle do que está
+                acontecendo na produção do software, tendo como base o gerenciamento de alterções e possíveis riscos que
+                podem ser gerados no código, assim como o controle de qualquer artefato persistente que são produzidos
+                pela
+                equipe.</li><br>
 
-        <li><strong>Gerenciamento de Configuração e Gerenciamento de projeto:</strong> É o controle do que está
-            acontecendo na produção do software, tendo como base o gerenciamento de alterções e possíveis riscos que
-            podem ser gerados no código, assim como o controle de qualquer artefato persistente que são produzidos pela
-            equipe.</li><br>
+            <li><strong>Gerenciamento de Ambiente:</strong> Vai coordenar toda a infraestrutura do ambiente, como por
+                exemplo o hardware dos pcs, ferramentas que podem ser utilizadas e outras tecnologias de suporte
+                disponível
+                para a equipe responsável.</li>
+        </ul>
 
-        <li><strong>Gerenciamento de Ambiente:</strong> Vai coordenar toda a infraestrutura do ambiente, como por
-            exemplo o hardware dos pcs, ferramentas que podem ser utilizadas e outras tecnologias de suporte disponível
-            para a equipe responsável.</li>
-    </ul>
+        <hr>
 
-    <hr>
+        <h1></h1>
 
-    <h1></h1>
-
-    <p align="center" style="font-size: larger;">Em breve teremos mais conteúdo nesse site. Seja paciente!!</p>
+        <p align="center" style="font-size: larger;">Em breve teremos mais conteúdo nesse site. Seja paciente!!</p>
+    </main>
 </body>
+
 </html>
