Adicionado o tópico de vatagens e desvantagens na pagina processo unificado. Ajuste dos parágrafos e adição de uma imagem fixa

--- a/estrutura/index.html
+++ b/estrutura/index.html
@@ -13,16 +13,23 @@
         <h3>O que é?</h3>
         <h3>Introdução</h3>
         <h3></h3>
-    </nav>
-    <main>
-        <h1 style="text-align: center">Processo Unificado Ágil</h1>
-        <h2 style="text-align: center;">Introdução</h2>
-        <hr>
         
+    </nav>
+
+    <header>
+        <div class="header-container">
+             <h1><u>Processo Unificado Ágil</u></h1>
+             <img src="/images/empresaImagem.jpg" style="width: 300px; height: auto; border: 2px solid black" >
+        </div>
+    </header>
+    <hr>
+
+    <main>
+
         <h2>Tópicos:</h2>
         <ul>
             <li>Introdução ao Processo Unificado Ágil</li>
-            <li>Benefícios</li>
+            <li>Benefícios e Desvantagens</li>
             <li>Diferença para o RUP</li>
             <li>Impacto nas empresas</li>
         </ul>
@@ -84,7 +91,43 @@
 
         <hr>
 
-        <h1></h1>
+        <h2>Vantagens e desvantagens</h2>
+
+        <p>Essa técnica possui muitas vantagens como redução de risco, identificação antecipada dos problemas, maior 
+            eficiência e mais segurança. E assim como qualquer outra técnica ela também possui suas desvantagens como a necessidade de ter um bom
+            gerente para o gerenciamento da equipe.
+        </p>
+
+        <h3>Vantagens</h3>
+
+        <ul>
+            <li>Maior Eficiência</li>
+            <li>Identificação antecipada dos problemas</li>
+            <li>Redução de riscos</li>
+        </ul>
+
+        <h3>Desvantagens:</h3>
+
+        <ul>
+            <li>Exige uma equipe experiente e alinhada com os processos</li>
+            <li>Exigem um bom gerente de projetos</li>
+            <li>Complexo e trabalhoso por pequenos projetos</li>
+        </ul>
+
+        <hr>
+
+        <h2>Diferenças para o RUP</h2>
+
+        <p>
+            O <abbr title="Processo unificado agil">AUP</abbr> é um processo mais flexiblizado que maximiza a eficiência da comunicação
+            e a entrega incremental de valor para o cliente. Enquanto o <abbr title="Rational Unified Process">RUP</abbr> por outro lado é mais focado na documentação detalhada
+            do projeto e é bem mais estruturado com as suas fases de projeto.
+        </p>
+        
+        <p>
+            A escolha do AUP ou RUP depende de como vai ser o projeto que vai ser trabalhado e as suas características, a escolha do processo vai variar dependendo
+            do tipo de proejeto que vai ser focado.
+        </p>
 
         <p align="center" style="font-size: larger;">Em breve teremos mais conteúdo nesse site. Seja paciente!!</p>
     </main>
