Adição de impacto nas empresas, ainda falta decorar

--- a/estrutura/index.html
+++ b/estrutura/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=width-device, initial-scale=1.0">
     <title>Processo Unificado Ágil</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/images/processoIcone.png">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
             <li>Impacto nas empresas</li>
         </ul>
 
-        <h2>Introdução:</h2>
+        <h2>| Introdução:</h2>
         <p style="text-align: justify;" style="text-align: center;">
             O Processo Unificado Ágil ou do inglês <i>Agile Unified Processs</i> adota uma filosofia serial (sequência
             linear de atividades) para o que é amplo interativo para que o é particular. Este processo possui 4
@@ -91,11 +92,11 @@
 
         <hr>
 
-        <h2>Vantagens e desvantagens</h2>
+        <h2>| Vantagens e desvantagens</h2>
 
-        <p>Essa técnica possui muitas vantagens como redução de risco, identificação antecipada dos problemas, maior 
-            eficiência e mais segurança. E assim como qualquer outra técnica ela também possui suas desvantagens como a necessidade de ter um bom
-            gerente para o gerenciamento da equipe.
+        <p>Essa técnica possui muitas vantagens como <strong>redução de risco</strong>, <strong>identificação antecipada dos problemas</strong>, <strong>maior 
+            eficiência</strong> e mais <strong>segurança</strong>. E assim como qualquer outra técnica ela também possui suas desvantagens como a necessidade de ter um bom
+            gerente ótimo para o gerenciamento da equipe.
         </p>
 
         <h3>Vantagens</h3>
@@ -116,18 +117,43 @@
 
         <hr>
 
-        <h2>Diferenças para o RUP</h2>
+        <h2>| Diferenças para o RUP</h2>
 
         <p>
-            O <abbr title="Processo unificado agil">AUP</abbr> é um processo mais flexiblizado que maximiza a eficiência da comunicação
-            e a entrega incremental de valor para o cliente. Enquanto o <abbr title="Rational Unified Process">RUP</abbr> por outro lado é mais focado na documentação detalhada
+            O <strong><abbr title="Processo unificado agil">AUP</abbr></strong> é um processo mais flexiblizado que maximiza a eficiência da comunicação
+            e a entrega incremental de valor para o cliente. Enquanto o <strong><abbr title="Rational Unified Process">RUP</abbr></strong> por outro lado é mais focado na documentação detalhada
             do projeto e é bem mais estruturado com as suas fases de projeto.
         </p>
-        
+
+        <div align="center">
+            <img src="/images/aupIcone.png" style="width: 450px;">
+        </div>
         <p>
             A escolha do AUP ou RUP depende de como vai ser o projeto que vai ser trabalhado e as suas características, a escolha do processo vai variar dependendo
             do tipo de proejeto que vai ser focado.
         </p>
+
+        <hr>
+
+        <h2>| Impacto nas empresas</h2>
+
+        <p>
+            O <abbr title="Processo unificado ágil">AUP</abbr> pode trazer muito lucro para as empresas devido a sua facilidade de adaptação
+            nos diferentes tipos de sistemas que são solicitados pelos clientes. Alguma delas são:
+        </p>
+
+        <ul>
+            <li><strong>Flexiblidade:</strong>Ele permite que mudanças repentinas como a mudança de um requisito solictado pelo cliente possam ser ajustados com o plano e as 
+            atividades conforme as mudanças nos requisitos do cliente ou do mercado.</li>
+
+            <li><strong>Maior colaboração da equipe:</strong> A colaboração da equipe envolve todas as partes como os desenvolvedores, testadores, gerentes e até mesmo os clientes
+            que é o ponto de começo do projeto. Dessse jeito ele permite uma comunicação mais amigável e melhora no desenvolvimento do sistema.</li>
+
+            <li><strong>Maior adaptação a mudanças:</strong> Esse processo pode ter uma alta eficiaria para se adaptar em casa de mudança de requisitos, prioridades ou mudanças
+            no mercado. Isso <strong>reduz</strong> o risco de projetos malsucedidos e aumentar a reputação da empresa.</li>
+        </ul>
+
+        <h2>Pensando...</h2>
 
         <p align="center" style="font-size: larger;">Em breve teremos mais conteúdo nesse site. Seja paciente!!</p>
     </main>
