Implementação das fases do cliclo de Processo Unficado Ágil

--- a/estrutura/index.html
+++ b/estrutura/index.html
@@ -153,9 +153,29 @@
             no mercado. Isso <strong>reduz</strong> o risco de projetos malsucedidos e aumentar a reputação da empresa.</li>
         </ul>
 
-        <h2>Pensando...</h2>
+        <h2>Quais são as fases do ciclo do Processo Unificado Ágil?</h2>
 
-        <p align="center" style="font-size: larger;">Em breve teremos mais conteúdo nesse site. Seja paciente!!</p>
+        <p>O ciclo de desenvolvimento do Processo Unificado Ágil é composto por 4 fases principais: concepção, elaboração, construção e
+            transição. Cada fase tem as suas próprias atividades, modelos, implementação, teste, implantação, gestão de configuração, gerenciamentos de projetos 
+            e ambiente.
+        </p>
+
+        <h3>Veja a seguir o que significa cada fase:</h3>
+
+        <ul>
+            <li><strong>Concepção:</strong> Nessa fase é abordado os requisitos principais do projeto para se ter um escopo inicial. Como por exemplo
+            a identificação de <em>Stakeholders</em>, análise de riscos e a elaboração de um plano de alto nível.</li>
+
+            <li><strong>Elaboração:</strong> A fase de elaboração é onde os requisitos são aprofundados detalhadamente e o início do plano de projetos. A equipe analisa 
+            produndamente os requisitos em busca de um design para o sistema e a definição de quais requisitos vão ter alta prioridade. O objetivo é ter uma base <strong>sólida</strong> 
+        para o desenvolvimento.</li>
+
+            <li><strong>Construção:</strong> A fase de construção é onde <strong>começa o desenvolvimento do sistema com entregas incrementais regulares</strong> de partes utilizáveis do sistema. Nessa fase também
+            acontece a seção de testes na medida que o software é desenvolvido para que as entregas não estejam com defeitas e que sejam de qualidade desde do início..</li>
+
+            <li><strong>Transição:</strong> Nessa fase é onde o software é testado de forma mais aprofundada, implementado e validada para o ambiente de produção. Analisam os potenciais riscos e vulnerabilidades
+            do software antes que possa ser feito a entrega final para o cliente.</li>
+        </ul>
     </main>
 </body>
 
